overlays/prod/ad-deploy.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
spec:
  replicas: 2
  template:
    spec: 
      containers:
        - name: server
          image: us-central1-docker.pkg.dev/google-samples/microservices-demo/adservice:v0.10.2
