overlays/prod/config-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      containers:
      - name: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
spec:
  template:
    spec:
      containers:
      - name: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
spec:
  template:
    spec:
      containers:
      - name: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice
spec:
  template:
    spec:
      containers:
      - name: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice
spec:
  template:
    spec:
      containers:
      - name: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice
spec:
  template:
    spec:
      containers:
      - name: server
